<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.shurru.myapplication.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<TextView
    android:layout_width="372dp"
    android:layout_height="wrap_content"
    android:id="@+id/name"
    android:text="@string/one"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:textColorHighlight="@color/colorPrimaryDark"
    android:fontFamily="monospace"
    />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textAlignment="textStart"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:maxLength="18"
            android:textColorHighlight="@color/colorPrimaryDark"
            />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/two"

    android:layout_marginTop="15dp"
    android:textColorHighlight="@color/colorPrimaryDark"
    android:layout_marginLeft="10dp"
    android:fontFamily="monospace"
    />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:maxLines="1"
            android:maxLength="10"
            android:layout_marginTop="15dp"/>

        <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/three"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:fontFamily="monospace"
     />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:textAlignment="textStart"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:maxLength="30"
            android:textColorHighlight="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:entries="@array/five"
            android:id="@+id/spinner"
            android:layout_marginTop="15dp"
            android:textColorHighlight="@color/colorPrimaryDark"
            >

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textColorHighlight="@color/colorPrimaryDark"

            />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textAlignment="textStart"
            android:layout_marginTop="15dp"
            android:maxLength="10"
            android:maxLines="1"
            android:textColorHighlight="@color/colorPrimaryDark"
              />

            <Button
                android:id="@+id/password"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="Next"
                android:onClick="passwords"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:layout_marginTop="15dp"
                />

    </LinearLayout>





</ScrollView>
